--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.derek.helloglass" >
-
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -33,6 +34,11 @@
             android:name=".Hours"
             android:icon="@drawable/ic_glass_logo"
             android:label="@string/title_activity_hours" >
+        </activity>
+        <activity
+            android:name=".JSONtest"
+            android:icon="@drawable/ic_glass_logo"
+            android:label="@string/title_activity_json" >
         </activity>
     </application>
 
